@@ -4,7 +4,8 @@ Changelog for zest.releaser
 1.8 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Added 'longtest' command that renders a setup.py's long description
+  and opens it in a web browser.
 
 
 1.7 (2009-02-16)
